--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="en">
 	<head>
-		<title>Mate Puljiz's personal website</title>
+		<title>Mate Puljiz's website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -58,7 +58,7 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="avatar" /></span>
 					<h1 id="logo"><a href="#">Mate Puljiz</a></h1>
 					<!--<p>PhD</p>-->
-					<em><a href="https://www.fer.unizg.hr/en/mate.puljiz">Assistant professor @ University of Zagreb</a></em>
+					<em><a href="https://www.fer.unizg.hr/en/mate.puljiz">Associate professor<br>@ University of Zagreb</a></em>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -78,7 +78,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="container">
-								<h2>Mate Puljiz's personal website</h2>
+								<h2>Mate Puljiz's website</h2>
 								<h5>Address:</h5>
 								<p>
 									University of Zagreb<br />
