update index.html and add mypapers.bib with recent publications

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 displayAlign: "left",
 displayIndent: "5em",
 
-
 TeX: {
 extensions: ["color.js"],
 Macros: {
@@ -60,7 +59,7 @@ color: "#541F14",
             <span class="image avatar"><img src="https://www.fer.unizg.hr/_download/portfolio/52%20Mate%20Puljiz.JPG" alt="avatar" /></span>
             <h1 id="logo"><a href="#">Mate Puljiz</a></h1>
             <!--<p>PhD</p>-->
-            <em><a href="https://www.fer.unizg.hr/en/mate.puljiz">Associate professor<br />@ University of Zagreb,<br /> Faculty of Electrical Engineering and Computing</a></em>
+            <em><a href="https://www.fer.unizg.hr/en/mate.puljiz">Associate professor<br />@ University of Zagreb<br />Faculty of Electrical Engineering and Computing</a></em>
         </header>
         <nav id="nav">
             <ul>
