--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ color: "#541F14",
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <link rel="stylesheet" href="assets/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/pcooksey/bibtex-js@1.0.0/src/bibtex_js.min.js"></script>
+    <bibtex src="papers/refs.bib"></bibtex>
 </head>
 
 <body>
@@ -89,24 +91,43 @@ color: "#541F14",
                     </p>
                 </div>
             </section>
-            <!-- Two 
+            <!-- Two -->
+            <!--
             <section id="two">
                 <div class="container">
                     <h3>Research interests</h3>
                     <p>Topological Dynamics • Symbolic Systems • Continuum Theory • Ergodic Theory</p>
                 </div>
-</section>-->
+            </section>
+            -->
             <!-- Three -->
             <section id="three">
                 <div class="container">
                     <h3>Publications &amp; Talks</h3>
                     <h4>Journal articles</h4>
+                    <div class="bibtex_structure">
+                        <div class="sort year" extra="DESC number">
+                            <div class="templates"></div>
+                        </div>
+                    </div>
                     <ul class="papers">
-                        <li>(with Chris Good and Piotr Oprocha) <a href="preprints/shadowing.pdf">Shadowing, asymptotic shadowing and s-limit shadowing</a>, Fund. Math. <strong>244</strong> (2019), no. 3, 287-312.</li>
-                        <li>(with Leobardo Fernández and Chris Good) <a href="preprints/atms.pdf">Almost minimal systems and periodicity in
-                                hyperspaces</a>, Ergodic Theory Dynam. Systems, accepted: 25 Oct 2016.</li>
-                        <li>(with John Haslegrave) <a href="preprints/consensus.pdf">Reaching consensus on a connected graph</a>, J. Appl. Probab. <strong>54</strong> (2017), no. 1, 181–198.</li>
-                        <li>(with Leobardo Fernández, Chris Good, and Ártico Ramírez) <a href="preprints/hyp-ct.pdf">Chain transitivity in hyper-spaces</a>, Chaos Solitons Fractals <strong>81</strong> (2015), no. part A, 83–90.</li>
+                        <div id="bibtex_display">
+                            <div class="bibtex_template" style="display: none;">
+                                <li class="if author"><span class="author"></span>.
+                                    <span class="if title">
+                                        <a class="bibtexVar" href="papers/+FILE+" extra="FILE">
+                                            <span class="title"></span>.
+                                        </a>
+                                    </span>
+                                    <span class="if journal"><em><span class="journal"></span></em></span>
+                                    <span class="if volume">
+                                        <strong><span class="volume"></span></strong>
+                                        <span class="if number">(<span class="number"></span>)</span></span>
+                                    </span>
+                                    <span class="if year">(<span class="year"></span>)
+                                </li>
+                            </div>
+                        </div>
                     </ul>
                     <h4>Preprints</h4>
                     <ul class="papers">
