update avatar image path in 404.html and index.html for consistency

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ color: "#541F14",
     <!-- Header -->
     <section id="header">
         <header>
-            <span class="image avatar"><img src="https://www.fer.unizg.hr/_download/portfolio/52%20Mate%20Puljiz.JPG" alt="avatar" /></span>
+            <span class="image avatar"><img src="images/avatar.jpg" alt="avatar" /></span>
             <h1 id="logo"><a href="#">Mate Puljiz</a></h1>
             <!--<p>PhD</p>-->
             <em><a href="https://www.fer.unizg.hr/en/mate.puljiz">Associate professor<br />@ University of Zagreb<br />Faculty of Electrical Engineering and Computing</a></em>
