--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <!-- Header -->
     <section id="header">
         <header>
-            <span class="image avatar"><img src="https://www.fer.unizg.hr/_download/portfolio/52%20Mate%20Puljiz.JPG" alt="avatar" /></span>
+            <span class="image avatar"><img src="images/avatar.jpg" alt="avatar" /></span>
             <h1 id="logo"><a href="#">Mate Puljiz</a></h1>
             <!--<p>PhD</p>-->
             <em><a href="https://www.fer.unizg.hr/en/mate.puljiz">Associate professor<br />@ University of Zagreb<br />Faculty of Electrical Engineering and Computing</a></em>
