--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
 <head>
     <title>Mate Puljiz's website</title>
+    <link rel="canonical" href="https://matep.github.io/" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
